--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 
         .start-box {
             margin: 20px 0;
+            display: none;
+        }
+
+        .start-box.active {
+            display: block;
         }
 
         .start-box #input-counter {
@@ -127,7 +132,7 @@
 
 <body>
     <div class="container">
-        <div class="start-box">
+        <div class="start-box active">
             <input type="text" id="input-counter" placeholder="زمان مورد نظر خود را به ثانیه وارد کنید">
             <button id="start-counter">شروع</button>
         </div>
